--- a/luha-wedding-main/luha-wedding-main/index.html
+++ b/luha-wedding-main/luha-wedding-main/index.html
@@ -469,6 +469,108 @@
           </a>
         </div>
 
+        <div class="col mt-3">
+          <a href="img/foto36.jpeg" data-toggle="lightbox" data-caption="Luffy & Hancock 34" data-gallery="mygallery">
+            <img src="img/foto36.jpeg" alt="Luffy & Hancock 34" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+
+        <div class="col mt-3">
+          <a href="img/foto39.jpeg" data-toggle="lightbox" data-caption="Luffy & Hancock 37" data-gallery="mygallery">
+            <img src="img/foto39.jpeg" alt="Luffy & Hancock 37" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+
+        <div class="col mt-3">
+          <a href="img/foto40.jpeg" data-toggle="lightbox" data-caption="Luffy & Hancock 38" data-gallery="mygallery">
+            <img src="img/foto40.jpeg" alt="Luffy & Hancock 38" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+
+        <div class="col mt-3">
+          <a href="img/foto43.jpeg" data-toggle="lightbox" data-caption="Luffy & Hancock 41" data-gallery="mygallery">
+            <img src="img/foto43.jpeg" alt="Luffy & Hancock 41" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        
+        <div class="col mt-3">
+          <a href="img/foto44.jpeg" data-toggle="lightbox" data-caption="Luffy & Hancock 42" data-gallery="mygallery">
+            <img src="img/foto44.jpeg" alt="Luffy & Hancock 42" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+
+        <div class="col mt-3">
+          <a href="img/foto45.jpeg" data-toggle="lightbox" data-caption="Luffy & Hancock 43" data-gallery="mygallery">
+            <img src="img/foto45.jpeg" alt="Luffy & Hancock 43" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+
+        <div class="col mt-3">
+          <a href="img/foto46.jpeg" data-toggle="lightbox" data-caption="Luffy & Hancock 44" data-gallery="mygallery">
+            <img src="img/foto46.jpeg" alt="Luffy & Hancock 44" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+
+        <div class="col mt-3">
+          <a href="img/foto47.jpeg" data-toggle="lightbox" data-caption="Luffy & Hancock 45" data-gallery="mygallery">
+            <img src="img/foto47.jpeg" alt="Luffy & Hancock 45" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+
+        <div class="col mt-3">
+          <a href="img/foto48.jpeg" data-toggle="lightbox" data-caption="Luffy & Hancock 46" data-gallery="mygallery">
+            <img src="img/foto48.jpeg" alt="Luffy & Hancock 46" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+
+        <div class="col mt-3">
+          <a href="img/foto49.jpeg" data-toggle="lightbox" data-caption="Luffy & Hancock 47" data-gallery="mygallery">
+            <img src="img/foto49.jpeg" alt="Luffy & Hancock 47" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+
+        <div class="col mt-3">
+          <a href="img/foto50.jpeg" data-toggle="lightbox" data-caption="Luffy & Hancock 48" data-gallery="mygallery">
+            <img src="img/foto50.jpeg" alt="Luffy & Hancock 48" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+
+        <div class="col mt-3">
+          <a href="img/foto51.jpeg" data-toggle="lightbox" data-caption="Luffy & Hancock 49" data-gallery="mygallery">
+            <img src="img/foto51.jpeg" alt="Luffy & Hancock 49" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+
+        <div class="col mt-3">
+          <a href="img/foto52.jpeg" data-toggle="lightbox" data-caption="Luffy & Hancock 50" data-gallery="mygallery">
+            <img src="img/foto52.jpeg" alt="Luffy & Hancock 50" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+
+        <div class="col mt-3">
+          <a href="img/foto53.jpeg" data-toggle="lightbox" data-caption="Luffy & Hancock 51" data-gallery="mygallery">
+            <img src="img/foto53.jpeg" alt="Luffy & Hancock 51" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+
+        <div class="col mt-3">
+          <a href="img/foto54.jpeg" data-toggle="lightbox" data-caption="Luffy & Hancock 52" data-gallery="mygallery">
+            <img src="img/foto54.jpeg" alt="Luffy & Hancock 52" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+
+        <div class="col mt-3">
+          <a href="img/foto55.jpeg" data-toggle="lightbox" data-caption="Luffy & Hancock 53" data-gallery="mygallery">
+            <img src="img/foto55.jpeg" alt="Luffy & Hancock 53" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+
+        <div class="col mt-3">
+          <a href="img/foto56.jpeg" data-toggle="lightbox" data-caption="Luffy & Hancock 54" data-gallery="mygallery">
+            <img src="img/foto56.jpeg" alt="Luffy & Hancock 54" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+
       </div>
     </div>
   </section>
